--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,9 @@ header {
   display: flex;
   flex: 1 1 0;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background-color: var(--primary-color);
-  padding: 20px;
+  padding: 15px 40px;
   gap: 10px;
   text-align: center;
 }
